# team5-waterandfish-BE-final

./: .dockerignore  .gitignore  API_REFACTOR.md  Dockerfile  Dockerfile.dev  FRONTEND_ROUTE_API_MAPPING.md  README.md  README.md.bak  WEBSOCKET_SERVER_FIX.md  WEBSOCKET_SERVICES_GUIDE.md  build.sh  custom_env  docker-compose.yml  pyproject.toml  test_websocket_server.py
.github/workflows/: ci.yml  deploy_BE.yml  main.yml
animations/: KETI_SL_0000000106.json  KETI_SL_0000000107.json  KETI_SL_0000000109.json  KETI_SL_0000000110.json  KETI_SL_0000000115.json  KETI_SL_0000000120.json  KETI_SL_0000000121.json  KETI_SL_0000000122.json  KETI_SL_0000000123.json  KETI_SL_0000000124.json  KETI_SL_0000000125.json  KETI_SL_0000000126.json  KETI_SL_0000000127.json  KETI_SL_0000000129.json  KETI_SL_0000000130.json  KETI_SL_0000000131.json  KETI_SL_0000000133.json  KETI_SL_0000000134.json  KETI_SL_0000000136.json  KETI_SL_0000000137.json  KETI_SL_0000000138.json  KETI_SL_0000000147.json  KETI_SL_0000000148.json  KETI_SL_0000000149.json  KETI_SL_0000000152.json  KETI_SL_0000000153.json  KETI_SL_0000000154.json  KETI_SL_0000000157.json  KETI_SL_0000000158.json  KETI_SL_0000000159.json  KETI_SL_0000000160.json  KETI_SL_0000000161.json  KETI_SL_0000000163.json  KETI_SL_0000000166.json  KETI_SL_0000000167.json  KETI_SL_0000000170.json  KETI_SL_0000000173.json  KETI_SL_0000000174.json  KETI_SL_0000000175.json  KETI_SL_0000000176.json  (+94 more)
config/: websocket_servers.json
model-info/: model-info-20250704_023527.json  model-info-20250704_025826.json  model-info-20250704_031902.json  model-info-20250704_033404.json  model-info-20250704_034022.json  model-info-20250704_050204.json  model-info-20250704_051954.json  model-info-20250704_053658.json  model-info-20250704_055029.json  model-info-20250704_061235.json  model-info-20250704_064642.json  model-info-20250704_091004.json  model-info-20250704_100935.json  model-info-20250704_103733.json  model-info-20250704_112249.json  model-info-20250704_113659.json  model-info-20250704_132946.json
models/: sign_language_model_20250704_023527.keras  sign_language_model_20250704_025826.keras  sign_language_model_20250704_031902.keras  sign_language_model_20250704_042250.keras  sign_language_model_20250704_044328.keras  sign_language_model_20250704_051954.keras  sign_language_model_20250704_053658.keras  sign_language_model_20250704_070758.keras  sign_language_model_20250704_073929.keras  sign_language_model_20250704_080939.keras  sign_language_model_20250704_083224.keras  sign_language_model_20250704_091004.keras  sign_language_model_20250704_092734.keras  sign_language_model_20250704_094618.keras  sign_language_model_20250704_100018.keras  sign_language_model_20250704_103733.keras  sign_language_model_20250704_110434.keras  sign_language_model_20250704_132946.keras  sign_language_model_20250704_135537.keras
public/animations/: KETI_SL_0000000108.json  KETI_SL_0000000112.json  KETI_SL_0000000113.json  KETI_SL_0000000114.json  KETI_SL_0000000116.json  KETI_SL_0000000117.json  KETI_SL_0000000118.json  KETI_SL_0000000119.json  KETI_SL_0000000128.json  KETI_SL_0000000140.json  KETI_SL_0000000141.json  KETI_SL_0000000142.json  KETI_SL_0000000143.json  KETI_SL_0000000144.json  KETI_SL_0000000145.json  KETI_SL_0000000146.json  KETI_SL_0000000150.json  KETI_SL_0000000151.json  KETI_SL_0000000155.json  KETI_SL_0000000162.json  KETI_SL_0000000164.json  KETI_SL_0000000165.json  KETI_SL_0000000168.json  KETI_SL_0000000169.json  KETI_SL_0000000171.json  KETI_SL_0000000172.json  KETI_SL_0000000177.json  KETI_SL_0000000178.json  KETI_SL_0000000179.json  KETI_SL_0000000183.json  KETI_SL_0000000184.json  KETI_SL_0000000185.json  KETI_SL_0000000186.json  KETI_SL_0000000187.json  KETI_SL_0000000188.json  KETI_SL_0000000189.json  KETI_SL_0000000191.json  KETI_SL_0000000192.json  KETI_SL_0000000193.json  KETI_SL_0000000194.json  (+121 more)
public/model-info/: model-info-20250704_022235.json  model-info-20250704_040112.json  model-info-20250704_042250.json  model-info-20250704_044328.json  model-info-20250704_070758.json  model-info-20250704_073929.json  model-info-20250704_080939.json  model-info-20250704_083224.json  (+9 more)
scripts/: check_websocket_servers.sh  cleanup_websocket_ports.sh  deploy_all_websocket_services.sh  generate_server_config.py  manage_websocket_services.py  monitor_websocket_services.sh  start_websocket_servers.sh  websocket-server@.service  websocket_server_wrapper.py
src/: main.py  main_http3.py.backup
tests/: test_api_basic.py  test_api_db.py  test_api_public.py
(+61 files in other folders)
