[tool.poetry]
name = "team5-waterandfish-be"
version = "0.1.0"
description = ""
authors = ["sweeetpotaooo <sehyun5004@naver.com>"]
readme = "README.md"
packages = [
    { include = "*", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = ">=0.115.14,<0.116.0"
uvicorn = ">=0.34.3,<0.35.0"
gunicorn = ">=21.2.0,<22.0.0"
motor = ">=3.3.0,<4.0.0"
pymongo = ">=4.6.0,<5.0.0"
PyJWT = ">=2.8.0,<3.0.0"
httpx = ">=0.24.0,<1.0.0"
python-multipart = ">=0.0.6,<1.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"
bcrypt = "4.0.1"
passlib = {version = "1.7.4", extras = ["bcrypt"]}
sqlalchemy = ">=2.0.0,<3.0.0"
numpy = ">=1.23.0,<2.0.0"
# PyTorch CPU 버전 (EC2 최적화) - 안정적인 버전 사용
torch = "2.2.0"
torchvision = "0.17.0"
torchaudio = "2.2.0"
# sentence-transformers CPU 전용 설정
sentence-transformers = {version = ">=2.2.2,<3.0.0", extras = []}
transformers = ">=4.21.0,<5.0.0"
tokenizers = ">=0.13.0,<1.0.0"
safetensors = "^0.5.3"
# OpenCV headless 버전 (서버 환경 최적화)
opencv-python-headless = "^4.8.0"
mediapipe = "^0.10.0"
# TensorFlow 아키텍처별 최적화 - 최신 안정 버전으로 업데이트
tensorflow-cpu = {version = "2.16.2", markers = "sys_platform == 'linux'"}
tensorflow = {version = "2.16.2", markers = "sys_platform == 'win32' or (sys_platform == 'darwin' and platform_machine == 'x86_64')"}
tensorflow-macos = {version = "2.16.2", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"}
websockets = "^12.0"
pillow = "^10.0.0"
# JAX CPU 버전 (EC2 최적화) - 안정적인 버전
jax = "0.4.25"
jaxlib = "0.4.25"
# 추가 최적화 라이브러리
scikit-learn = ">=1.3.0,<2.0.0"
scipy = ">=1.10.0,<2.0.0"
psutil = ">=5.9.0,<6.0.0"
# AWS S3 접근을 위한 라이브러리
boto3 = ">=1.34.0,<2.0.0"
# typing-extensions 버전 충돌 해결을 위한 명시적 버전 지정
typing-extensions = ">=4.8.0,<5.0.0"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pymongo = "^4.13.2"
python-jose = "^3.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

