[tool.poetry]
name = "team5-waterandfish-be"
version = "0.1.0"
description = ""
authors = ["sweeetpotaooo <sehyun5004@naver.com>"]
readme = "README.md"
packages = [
    { include = "*", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = ">=0.115.14,<0.116.0"
uvicorn = ">=0.34.3,<0.35.0"
gunicorn = ">=21.2.0,<22.0.0"
motor = ">=3.3.0,<4.0.0"
pymongo = ">=4.6.0,<5.0.0"
PyJWT = ">=2.8.0,<3.0.0"
httpx = ">=0.24.0,<1.0.0"
python-multipart = ">=0.0.6,<1.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"
bcrypt = "4.0.1"
passlib = {version = "1.7.4", extras = ["bcrypt"]}
sqlalchemy = ">=2.0.0,<3.0.0"
numpy = ">=1.23.0,<2.0.0"
sentence-transformers = {version = ">=2.2.2,<3.0.0", extras = []}
transformers = ">=4.21.0,<5.0.0"
tokenizers = ">=0.13.0,<1.0.0"
safetensors = "^0.5.3"
opencv-python-headless = "^4.8.0"
tensorflow = {version = "2.12.0", optional = true}
#tensorflow-macos = {version = "2.13.1", optional = true}
websockets = "^12.0"
pillow = "^10.0.0"
jax = "0.4.20"
jaxlib = "0.4.20"
scikit-learn = ">=1.3.0,<2.0.0"
scipy = ">=1.10.0,<2.0.0"
psutil = ">=5.9.0,<6.0.0"
python-jose = "^3.5.0"
boto3 = "*"

[tool.poetry.extras]
linux = ["tensorflow"]
macos = ["tensorflow-macos"]

[tool.poetry.group.dev.dependencies]
python-jose = "^3.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
