[tool.poetry]
name = "team5-waterandfish-be"
version = "0.1.0"
description = ""
authors = ["sweeetpotaooo <sehyun5004@naver.com>"]
readme = "README.md"
packages = [
    { include = "*", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
gunicorn = "^23.0.0"
motor = "^3.7.1"
pymongo = "^4.13.2"
PyJWT = "^2.10.1"
httpx = "^0.28.1"
python-multipart = "^0.0.20"
pydantic-settings = "^2.10.1"
bcrypt = "^4.3.0"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
sqlalchemy = "^2.0.41"
numpy = "^1.26.4"
sentence-transformers = "^5.0.0"
transformers = "^4.53.1"
tokenizers = "^0.21.2"
safetensors = "^0.5.3"
opencv-python-headless = "^4.9.0"
tensorflow = "^2.16.2"
websockets = "^15.0.1"
pillow = "^11.3.0"
jax = "^0.4.20"
jaxlib = "^0.4.20"
scikit-learn = "^1.7.0"
scipy = "^1.16.0"
psutil = "^7.0.0"
python-jose = "^3.5.0"
boto3 = "^1.39.3"
mediapipe = "^0.10.14"
tf-keras = "^2.19.0"

[tool.poetry.group.dev.dependencies]
python-jose = "^3.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"